random_visa/adapters/inbound/parser/antlr/SailParser.py
# Generated from /Volumes/External/Code/random_vISA/random_visa/adapters/inbound/parser/antlr/Sail.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SailParser ( Parser ):

    grammarFileName = "Sail.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'default'", "'Order'", "'dec'", "'inc'", 
                     "'$include'", "'<'", "'>'", "'.'", "'/'", "'-'", "'let'", 
                     "':'", "'='", "';'", "'type'", "'register'", "'val'", 
                     "'('", "','", "')'", "'->'", "'function'", "'{'", "'}'", 
                     "'bits'", "'int'", "'nat'", "'bool'", "'unit'", "'range'", 
                     "'vector'", "'foreach'", "'from'", "'to'", "'if'", 
                     "'then'", "'else'", "'return'", "'~'", "'!'", "'+'", 
                     "'*'", "'%'", "'&'", "'|'", "'^'", "'<<'", "'>>'", 
                     "'>>_s'", "'+_sat'", "'-_sat'", "'=='", "'!='", "'<='", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL_LITERAL", "HEX_LITERAL", "BIN_LITERAL", "INT_LITERAL", 
                      "STRING_LITERAL", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS" ]

    RULE_spec = 0
    RULE_topLevelItem = 1
    RULE_defaultOrderDirective = 2
    RULE_includeDirective = 3
    RULE_includePath = 4
    RULE_letDecl = 5
    RULE_typeDecl = 6
    RULE_registerDecl = 7
    RULE_valDecl = 8
    RULE_functionDef = 9
    RULE_paramList = 10
    RULE_param = 11
    RULE_typeRef = 12
    RULE_stmt = 13
    RULE_callExpr = 14
    RULE_expr = 15
    RULE_commentItem = 16

    ruleNames =  [ "spec", "topLevelItem", "defaultOrderDirective", "includeDirective", 
                   "includePath", "letDecl", "typeDecl", "registerDecl", 
                   "valDecl", "functionDef", "paramList", "param", "typeRef", 
                   "stmt", "callExpr", "expr", "commentItem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    BOOL_LITERAL=56
    HEX_LITERAL=57
    BIN_LITERAL=58
    INT_LITERAL=59
    STRING_LITERAL=60
    ID=61
    BLOCK_COMMENT=62
    LINE_COMMENT=63
    WS=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SailParser.EOF, 0)

        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailParser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(SailParser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return SailParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = SailParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611686018422962142) != 0):
                self.state = 34
                self.topLevelItem()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(SailParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defaultOrderDirective(self):
            return self.getTypedRuleContext(SailParser.DefaultOrderDirectiveContext,0)


        def includeDirective(self):
            return self.getTypedRuleContext(SailParser.IncludeDirectiveContext,0)


        def letDecl(self):
            return self.getTypedRuleContext(SailParser.LetDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(SailParser.TypeDeclContext,0)


        def registerDecl(self):
            return self.getTypedRuleContext(SailParser.RegisterDeclContext,0)


        def valDecl(self):
            return self.getTypedRuleContext(SailParser.ValDeclContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(SailParser.FunctionDefContext,0)


        def commentItem(self):
            return self.getTypedRuleContext(SailParser.CommentItemContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelItem" ):
                return visitor.visitTopLevelItem(self)
            else:
                return visitor.visitChildren(self)




    def topLevelItem(self):

        localctx = SailParser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.defaultOrderDirective()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.includeDirective()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.letDecl()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.typeDecl()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.registerDecl()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.valDecl()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.functionDef()
                pass
            elif token in [62, 63]:
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.commentItem()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultOrderDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SailParser.RULE_defaultOrderDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultOrderDirective" ):
                listener.enterDefaultOrderDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultOrderDirective" ):
                listener.exitDefaultOrderDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefaultOrderDirective" ):
                return visitor.visitDefaultOrderDirective(self)
            else:
                return visitor.visitChildren(self)




    def defaultOrderDirective(self):

        localctx = SailParser.DefaultOrderDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defaultOrderDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(SailParser.T__0)
            self.state = 53
            self.match(SailParser.T__1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(SailParser.STRING_LITERAL, 0)

        def includePath(self):
            return self.getTypedRuleContext(SailParser.IncludePathContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_includeDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeDirective" ):
                listener.enterIncludeDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeDirective" ):
                listener.exitIncludeDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeDirective" ):
                return visitor.visitIncludeDirective(self)
            else:
                return visitor.visitChildren(self)




    def includeDirective(self):

        localctx = SailParser.IncludeDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_includeDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(SailParser.T__4)
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [60]:
                self.state = 57
                self.match(SailParser.STRING_LITERAL)
                pass
            elif token in [6]:
                self.state = 58
                self.match(SailParser.T__5)
                self.state = 59
                self.includePath()
                self.state = 60
                self.match(SailParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludePathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SailParser.ID)
            else:
                return self.getToken(SailParser.ID, i)

        def getRuleIndex(self):
            return SailParser.RULE_includePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludePath" ):
                listener.enterIncludePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludePath" ):
                listener.exitIncludePath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludePath" ):
                return visitor.visitIncludePath(self)
            else:
                return visitor.visitChildren(self)




    def includePath(self):

        localctx = SailParser.IncludePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includePath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SailParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 66
                    self.match(SailParser.ID) 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 72
                self.match(SailParser.T__7)
                self.state = 73
                self.match(SailParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(SailParser.ExprContext,0)


        def typeRef(self):
            return self.getTypedRuleContext(SailParser.TypeRefContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_letDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetDecl" ):
                listener.enterLetDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetDecl" ):
                listener.exitLetDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetDecl" ):
                return visitor.visitLetDecl(self)
            else:
                return visitor.visitChildren(self)




    def letDecl(self):

        localctx = SailParser.LetDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_letDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SailParser.T__10)
            self.state = 77
            self.match(SailParser.ID)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 78
                self.match(SailParser.T__11)
                self.state = 79
                self.typeRef()


            self.state = 82
            self.match(SailParser.T__12)
            self.state = 83
            self.expr(0)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 84
                self.match(SailParser.T__13)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(SailParser.TypeRefContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_typeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDecl" ):
                listener.enterTypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDecl" ):
                listener.exitTypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = SailParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SailParser.T__14)
            self.state = 88
            self.match(SailParser.ID)
            self.state = 89
            self.match(SailParser.T__12)
            self.state = 90
            self.typeRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegisterDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(SailParser.TypeRefContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_registerDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterDecl" ):
                listener.enterRegisterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterDecl" ):
                listener.exitRegisterDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegisterDecl" ):
                return visitor.visitRegisterDecl(self)
            else:
                return visitor.visitChildren(self)




    def registerDecl(self):

        localctx = SailParser.RegisterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_registerDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SailParser.T__15)
            self.state = 93
            self.match(SailParser.ID)
            self.state = 94
            self.match(SailParser.T__11)
            self.state = 95
            self.typeRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def typeRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailParser.TypeRefContext)
            else:
                return self.getTypedRuleContext(SailParser.TypeRefContext,i)


        def getRuleIndex(self):
            return SailParser.RULE_valDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValDecl" ):
                listener.enterValDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValDecl" ):
                listener.exitValDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValDecl" ):
                return visitor.visitValDecl(self)
            else:
                return visitor.visitChildren(self)




    def valDecl(self):

        localctx = SailParser.ValDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_valDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(SailParser.T__16)
            self.state = 98
            self.match(SailParser.ID)
            self.state = 99
            self.match(SailParser.T__11)
            self.state = 100
            self.match(SailParser.T__17)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2305843013475106816) != 0):
                self.state = 101
                self.typeRef()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==19:
                    self.state = 102
                    self.match(SailParser.T__18)
                    self.state = 103
                    self.typeRef()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 111
            self.match(SailParser.T__19)
            self.state = 112
            self.match(SailParser.T__20)
            self.state = 113
            self.typeRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(SailParser.ParamListContext,0)


        def typeRef(self):
            return self.getTypedRuleContext(SailParser.TypeRefContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailParser.StmtContext)
            else:
                return self.getTypedRuleContext(SailParser.StmtContext,i)


        def getRuleIndex(self):
            return SailParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = SailParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SailParser.T__21)
            self.state = 116
            self.match(SailParser.ID)
            self.state = 117
            self.match(SailParser.T__17)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 118
                self.paramList()


            self.state = 121
            self.match(SailParser.T__19)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 122
                self.match(SailParser.T__20)
                self.state = 123
                self.typeRef()


            self.state = 126
            self.match(SailParser.T__12)
            self.state = 127
            self.match(SailParser.T__22)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2305843322746308608) != 0):
                self.state = 128
                self.stmt()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(SailParser.T__23)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailParser.ParamContext)
            else:
                return self.getTypedRuleContext(SailParser.ParamContext,i)


        def getRuleIndex(self):
            return SailParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = SailParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.param()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 137
                self.match(SailParser.T__18)
                self.state = 138
                self.param()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(SailParser.TypeRefContext,0)


        def getRuleIndex(self):
            return SailParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SailParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SailParser.ID)
            self.state = 145
            self.match(SailParser.T__11)
            self.state = 146
            self.typeRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SailParser.RULE_typeRef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CustomTypeContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SailParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomType" ):
                listener.enterCustomType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomType" ):
                listener.exitCustomType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustomType" ):
                return visitor.visitCustomType(self)
            else:
                return visitor.visitChildren(self)


    class BoolTypeContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolType" ):
                listener.enterBoolType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolType" ):
                listener.exitBoolType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolType" ):
                return visitor.visitBoolType(self)
            else:
                return visitor.visitChildren(self)


    class RangeTypeContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)
